# beats

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_requirements.txt
.github/workflows/: publish.yml  tests.yml
scripts/: explorer.py  first_pass.py  librosa_explorer.py  score.py
src/beats/: cli.py  filtering.py  types.py
src/beats/estimators/: transformed.py
tests/beats/: test_smoke.py
