[project]
name = "beats"
version = "0.0.0"
description = "Determine the tempo of an mp3 song"
authors = [
    {name = "Elvijs Sarkans", email = ""}
]
readme = "README.md"
requires-python = ">=3.11"

packages = [
    { include = "beats", from = "src" },
]

dependencies = [

]


[project.urls]
repository = "https://github.com/elvijs/beats"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.coverage.paths]
source = ["src"]
tests = ["tests"]


[tool.coverage.run]
branch = true
source = ["beats", "tests"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
